tests/ui/block-result/block-must-not-have-result-do.stderr
error[E0308]: mismatched types
  --> $DIR/block-must-not-have-result-do.rs:3:9
   |
LL |         true
   |         ^^^^ expected `()`, found `bool`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
