tests/ui/block-result/block-must-not-have-result-do.rs
fn main() {
    loop {
        true //~  ERROR mismatched types
    }
}
